<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>998</width>
    <height>632</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Electronic Database</string>
  </property>
  <property name="dockNestingEnabled">
   <bool>true</bool>
  </property>
  <widget class="QWidget" name="centralWidget">
   <layout class="QVBoxLayout" name="verticalLayout"/>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>998</width>
     <height>20</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuDatabase">
    <property name="title">
     <string>Database</string>
    </property>
    <widget class="QMenu" name="connectMenu">
     <property name="title">
      <string>&amp;Connect</string>
     </property>
     <addaction name="connectAction"/>
     <addaction name="separator"/>
    </widget>
    <addaction name="connectMenu"/>
    <addaction name="disconnectAction"/>
    <addaction name="separator"/>
    <addaction name="saveAction"/>
    <addaction name="separator"/>
    <addaction name="quitAction"/>
   </widget>
   <widget class="QMenu" name="menuSettings">
    <property name="title">
     <string>Settings</string>
    </property>
    <addaction name="settingsAction"/>
   </widget>
   <widget class="QMenu" name="menuEdit">
    <property name="title">
     <string>Edit</string>
    </property>
    <addaction name="undoAction"/>
    <addaction name="redoAction"/>
    <addaction name="separator"/>
    <addaction name="prevPartAction"/>
    <addaction name="nextPartAction"/>
    <addaction name="separator"/>
    <addaction name="nextContainerAction"/>
   </widget>
   <widget class="QMenu" name="menuWindows">
    <property name="title">
     <string>Windows</string>
    </property>
    <addaction name="addContainerWidgetAction"/>
   </widget>
   <addaction name="menuDatabase"/>
   <addaction name="menuEdit"/>
   <addaction name="menuSettings"/>
   <addaction name="menuWindows"/>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
  <action name="disconnectAction">
   <property name="text">
    <string>Disconnect</string>
   </property>
  </action>
  <action name="settingsAction">
   <property name="text">
    <string>Settings...</string>
   </property>
  </action>
  <action name="actionTest">
   <property name="text">
    <string>test</string>
   </property>
  </action>
  <action name="connectAction">
   <property name="text">
    <string>New Connection...</string>
   </property>
  </action>
  <action name="quitAction">
   <property name="icon">
    <iconset theme="application-exit">
     <normaloff/>
    </iconset>
   </property>
   <property name="text">
    <string>Quit</string>
   </property>
  </action>
  <action name="saveAction">
   <property name="enabled">
    <bool>false</bool>
   </property>
   <property name="icon">
    <iconset theme="document-save">
     <normaloff/>
    </iconset>
   </property>
   <property name="text">
    <string>Save All</string>
   </property>
  </action>
  <action name="undoAction">
   <property name="enabled">
    <bool>false</bool>
   </property>
   <property name="text">
    <string>Undo</string>
   </property>
  </action>
  <action name="redoAction">
   <property name="enabled">
    <bool>false</bool>
   </property>
   <property name="text">
    <string>Redo</string>
   </property>
  </action>
  <action name="createBackupAction">
   <property name="text">
    <string>Create Backup...</string>
   </property>
  </action>
  <action name="restoreBackupAction">
   <property name="text">
    <string>Restore From Backup...</string>
   </property>
  </action>
  <action name="addContainerWidgetAction">
   <property name="text">
    <string>Add Container Widget</string>
   </property>
  </action>
  <action name="nextContainerAction">
   <property name="text">
    <string>Next Container</string>
   </property>
  </action>
  <action name="nextPartAction">
   <property name="text">
    <string>Next Part</string>
   </property>
  </action>
  <action name="prevPartAction">
   <property name="text">
    <string>Previous Part</string>
   </property>
  </action>
 </widget>
 <resources/>
 <connections/>
</ui>
